--- a/standorte.html
+++ b/standorte.html
@@ -17,6 +17,36 @@
       <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css" />
       <link rel="stylesheet" href="fonts/pe-icon-7-stroke/css/helper.css" />
       <link rel="stylesheet" href="styles/style.css">
+
+      <style>
+        /*style the box*/
+        .gm-style .gm-style-iw {
+          background-color: #fff !important;
+          padding-left: 11px !important;
+          overflow: hidden !important;
+          display: block !important;
+        }
+
+        /*style the p tag*/
+        .gm-style .gm-style-iw #google-popup p {
+          padding: 10px;
+        }
+
+        /*style the arrow*/
+        .gm-style div div div div div div div div {
+          background-color: #fff !important;
+          padding: 0 !important;
+          margin: 0 !important;
+          right: 0;
+          left: 0;
+          bottom: 0;
+          top: 0;
+          padding-bottom: 10px !important;
+          padding-top: 8px !important;
+          color: #6a6c6f;
+        }
+      </style>
+
    </head>
    <body class="fixed-navbar sidebar-scroll landing-page fixed-footer rest">
       <!-- Header -->
@@ -67,7 +97,7 @@
                <li class="garage">
                   <div class="row p-xs">
                      <div class="col-lg-12">
-                        <a href="">
+                        <a id="garage" href="#">
                            <h4>Garage Gasometer</h4>
                         </a>
                         <h4 class="small m-t-n">Guglgasse 8, 1110 Wien</h4>
@@ -219,5 +249,53 @@
 <!-- App scripts -->
 <script src="scripts/homer.js"></script>
 <script src="scripts/index.js"></script>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+
+      <div class="modal-header text-center">
+      <h4 class="modal-title">Reservieren</h4>
+        <br/>
+          Du kannst dir einen Parkplatz in dieser Garage reservieren. <br/>
+          Die ersten 30 Minuten sind gratis, danach kostet die Reservierung die Hälfte der Parkgebühr.
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-lg-6">
+            <h4 class="text-center">Dauer</h4>
+            <select class="form-control input-lg">
+              <option value="30Min">30 Minuten - Gratis</option>
+              <option value="1Std">1 Stunde - 1€</option>
+              <option value="1.5Std">1.5 Stunden - 1,5€</option>
+              <option value="2Std">2 Stunden - 2€</option>
+              <option value="3Std">3 Stunden - 3€</option>
+            </select>
+          </div>
+          <div class="col-lg-6">
+            <h4 class="text-center">Kennzeichen</h4>
+            <select class="form-control input-lg">
+              <option value="W7777H">W7777H</option>
+              <option value="W8888H">W8888H</option>
+            </select>
+          </div>
+        </div>
+        <hr>
+        <div class="row m-b-sm">
+          <div class="col-lg-6">
+            <h5><span class="text-success">Guthaben:</span> 75,5€</h5>
+          </div>
+          <div class="col-lg-6">
+            <span class="pull-right"><a href="guthaben.html" class="btn btn-sm btn-primary btn-outline">Guthaben aufladen</a></span>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Abbrechen</button>
+        <button type="button" class="btn btn-primary">Reservieren</button>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
