--- a/parkverlauf.html
+++ b/parkverlauf.html
@@ -51,7 +51,7 @@
                <div class="col-lg-12">
                  <div class="hpanel animated-panel zoomIn">
                    <div class="panel-body">
-                     <div class="col-lg-4 col-md-4 m-b-md">
+                     <div class="col-lg-3 col-md-3 m-b-md">
                        <h5>Kennzeichen</h5>
                        <select class="form-control" name="kennzeichen">
                          <option>W7777H</option>
@@ -114,6 +114,10 @@
                          <span class="input-group-addon">bis</span>
                          <input type="text" class="form-control" name="end">
                        </div>
+                     </div>
+                     <div class="col-lg-1 col-md-1">
+                       <h5>Action</h5>
+                       <a type="reset" class="btn btn-primary btn-outline pull-right">Reset</a>
                      </div>
                    </div>
                  </div>
