--- a/profil.html
+++ b/profil.html
@@ -109,7 +109,7 @@
                                  <div class="input-group-btn">
                                     <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" type="button" aria-expanded="false"><span class="fa fa-cog"></span></button>
                                     <ul class="dropdown-menu pull-right">
-                                       <li><a id="bearbeiten">Bearbeiten</a></li>
+                                       <li><a id="bearbeiten1">Bearbeiten</a></li>
                                        <li><a href="">Entfernen</a></li>
                                     </ul>
                                  </div>
@@ -263,21 +263,23 @@
       </script>
 
       <script>
+        $('#bearbeiten1').click(function(){
+          $('#kennzeichen1').prop('disabled', false);
+        });
+      </script>
+
+      <script>
       $(function () {
         var count = 1;
         $('#add').on('click', function () {
           count++;
-          $('<div class="col-lg-6 m-b-md"><label>Kennzeichen '+ count + '</label><div class="input-group"><input type="text" class="form-control" placeholder="W7777H" id="" disabled name="kennzeichen"><div class="input-group-btn"><button class="btn btn-default dropdown-toggle" data-toggle="dropdown" type="button" aria-expanded="false"><span class="fa fa-cog"></span></button><ul class="dropdown-menu pull-right"><li><a href="">Bearbeiten</a></li><li><a href="">Entfernen</a></li></ul></div></div></div>').appendTo('#kennzeichen');
+          $('<div class="col-lg-6 m-b-md"><label>Kennzeichen '+ count + '</label><div class="input-group"><input type="text" class="form-control" placeholder="W7777H" id="kennzeichen' + count + '" disabled name="kennzeichen"><div class="input-group-btn"><button class="btn btn-default dropdown-toggle" data-toggle="dropdown" type="button" aria-expanded="false"><span class="fa fa-cog"></span></button><ul class="dropdown-menu pull-right"><li><a id="bearbeiten'+ count +'">Bearbeiten</a></li><li><a href="">Entfernen</a></li></ul></div></div></div>').appendTo('#kennzeichen');
+          $('#bearbeiten' + count).click(function(){
+            $('#kennzeichen' + count).prop('disabled', false);
+          });
         });
-      });
-      </script>
 
-      <script>
-        var count = 1;
-        $('#bearbeiten').click(function(){
-          count++;
-          $('#kennzeichen1').prop('disabled', false);
-        });
+      });
       </script>
 
       <script>
