Minor styling edits.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <div class="vertical-timeline-content">
                            <div class="p-sm">
                               <h2>Garage finden</h2>
-                              <p>Guthaben aufladen, bevorzugte Garage finden und die Navigation starten. Du kannst den Parkplatz sogar 30 Minuten lang kostenlos reservieren.</p>
+                              Guthaben aufladen, bevorzugte Garage finden und die Navigation starten. Du kannst den Parkplatz sogar 30 Minuten lang kostenlos reservieren.
                            </div>
                         </div>
                      </div>
@@ -122,7 +122,7 @@
                         <div class="vertical-timeline-content">
                            <div class="p-sm">
                               <h2>Garage öffnen</h2>
-                              <p>Du kannst das Garagentor mit der App öffnen (Bluetooth benötigt), die Miete wird dann automatisch gestartet.</p>
+                              Du kannst das Garagentor mit der App öffnen (Bluetooth benötigt), die Miete wird dann automatisch gestartet.
                            </div>
                         </div>
                      </div>
@@ -133,7 +133,7 @@
                         <div class="vertical-timeline-content">
                            <div class="p-sm">
                               <h2>Parken</h2>
-                              <p>In die Garage hineinfahren, den orangen Pfeilen folgen und auf einem PAYUCA Parkplatz parken.</p>
+                              In die Garage hineinfahren, den orangen Pfeilen folgen und auf einem PAYUCA Parkplatz parken.
                            </div>
                         </div>
                      </div>
@@ -144,7 +144,7 @@
                         <div class="vertical-timeline-content">
                            <div class="p-sm">
                               <h2>Miete beenden</h2>
-                              <p>Über „Parken beenden“ öffnet sich die Eingangstüre und dein Mietprozess wird beendet – so einfach ist PAYUCA Smart Parking.</p>
+                              Über „Parken beenden“ öffnet sich die Eingangstüre und dein Mietprozess wird beendet – so einfach ist PAYUCA Smart Parking.
                            </div>
                         </div>
                      </div>
@@ -162,7 +162,7 @@
                </div>
             </div>
             <div class="row m-t-lg">
-               <div class="col-lg-3">
+               <div class="col-lg-3 col-md-6">
                   <ul class="pricing-plan list-unstyled">
                      <li class="pricing-title">
                         Parken
@@ -175,7 +175,7 @@
                      </li>
                   </ul>
                </div>
-               <div class="col-lg-3">
+               <div class="col-lg-3 col-md-6">
                   <ul class="pricing-plan list-unstyled">
                      <li class="pricing-title">
                         Reservieren
@@ -188,7 +188,7 @@
                      </li>
                   </ul>
                </div>
-               <div class="col-lg-3">
+               <div class="col-lg-3 col-md-6">
                   <ul class="pricing-plan list-unstyled">
                      <li class="pricing-title">
                         Tagestarif
@@ -201,7 +201,7 @@
                      </li>
                   </ul>
                </div>
-               <div class="col-lg-3">
+               <div class="col-lg-3 col-md-6">
                   <ul class="pricing-plan list-unstyled">
                      <li class="pricing-title">
                         Monatstarif
@@ -210,7 +210,7 @@
                         auf Anfrage
                      </li>
                      <li class="pricing-title">
-                        <a class="btn btn-primary" href="#">Kontakt</a>
+                        <h2><a class="btn btn-primary btn-outline" href="#">Kontakt</a></h2>
                      </li>
                   </ul>
                </div>
@@ -247,7 +247,7 @@
                   <p>Lorem Ipsum available, but the majority have suffered alteration euismod. </p>
                </div>
                <div class="col-md-3 m-t pull-right">
-                  <a class="btn btn-primary btn-lg btn-outline pull-right" href="#">Kontakt</a>
+                  <a class="btn btn-primary btn-lg btn-outline pull-right" href="#">Mehr erfahren</a>
                </div>
             </div>
          </div>
@@ -444,7 +444,7 @@
       <!-- App scripts -->
       <script src="scripts/homer.js"></script>
       <script src="scripts/cookie.js"></script>
-      
+
       <script>
          $(document).ready(function () {
 
