--- a/gutschein.html
+++ b/gutschein.html
@@ -59,7 +59,7 @@
                   </div>
                   <div class="hpanel animated-panel zoomIn">
                     <div class="panel-body text-center">
-                      <h4 class="m-b-md text-success">Gutschein Einlösen</h4>
+                      <h4 class="m-b-md text-success">Gutschein einlösen</h4>
 
                       <div class="row m-t-lg">
                         <p class="m-b-md">Code eingeben</p>
