--- a/profil.html
+++ b/profil.html
@@ -48,6 +48,9 @@
             <div class="row">
                <div class="col-lg-12">
                   <div class="hpanel animated-panel zoomIn">
+                    <div class="alert alert-success">
+                      <h5><i class="fa fa-clock-o"></i>  Deine Reservierung in Garage Gasometer läuft in 1 Stunde ab.</h5>
+                    </div>
                      <div class="panel-body">
                         <div class="row">
                           <div class="col-lg-6">
