--- a/register.html
+++ b/register.html
@@ -57,8 +57,8 @@
                      <div class="panel-body">
                         <form name="simpleForm" novalidate="" id="simpleForm" action="#" method="post">
                            <div class="text-center m-b-md" id="wizardControl">
-                              <a class="btn btn-primary" href="#step1" data-toggle="tab">Schritt 1 - Kontodaten</a>
-                              <a class="btn btn-default" href="#step2" data-toggle="tab">Schritt 2 - SMS-Verifizierung</a>
+                              <a class="btn btn-primary" id="schritt1" data-toggle="tab">Schritt 1 - Kontodaten</a>
+                              <a class="btn btn-default disabled" id="schritt2" data-toggle="tab">Schritt 2 - SMS-Verifizierung</a>
                            </div>
                            <div class="tab-content">
                               <div id="step1" class="p-m tab-pane active">
@@ -99,7 +99,7 @@
                                     </div>
                                  </div>
                                  <div class="text-right m-t-xs">
-                                    <a class="btn btn-default next" href="#step2" data-toggle="tab">Next</a>
+                                    <a class="btn btn-default next" id="next" href="#step2" data-toggle="tab">Next</a>
                                  </div>
                               </div>
                               <div id="step2" class="p-m tab-pane">
@@ -253,62 +253,30 @@
       <!-- App scripts -->
       <script src="scripts/homer.js"></script>
       <script src="scripts/cookie.js"></script>
-      
+
       <script>
-         $(function(){
 
-             $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
-                 $('a[data-toggle="tab"]').removeClass('btn-primary');
-                 $('a[data-toggle="tab"]').addClass('btn-default');
-                 $(this).removeClass('btn-default');
-                 $(this).addClass('btn-primary');
-             })
+      $(document).ready(function(){
+        $(".next").click(function(){
+          $("#schritt1").removeClass("btn-primary");
+          $("#schritt1").addClass("btn-default");
+          $("#schritt1").addClass("disabled");
+          $("#schritt2").removeClass("btn-default");
+          $("#schritt2").removeClass("disabled");
+          $("#schritt2").addClass("btn-primary");
+        });
 
-             $('.next').click(function(){
-                 var nextId = $(this).parents('.tab-pane').next().attr("id");
-                 $('[href=#'+nextId+']').tab('show');
-             })
+        $(".prev").click(function(){
+          $("#schritt1").removeClass("disabled");
+          $("#schritt1").removeClass("btn-default");
+          $("#schritt1").addClass("btn-primary");
+          $("#schritt2").addClass("btn-default");
+          $("#schritt2").addClass("disabled");
+          $("#schritt2").removeClass("btn-primary");
+        });
 
-             $('.prev').click(function(){
-                 var prevId = $(this).parents('.tab-pane').prev().attr("id");
-                 $('[href=#'+prevId+']').tab('show');
-             })
+      });
 
-             $('.submitWizard').click(function(){
-
-                 var approve = $(".approveCheck").is(':checked');
-                 if(approve) {
-                     // Got to step 1
-                     $('[href=#step1]').tab('show');
-
-                     // Serialize data to post method
-                     var datastring = $("#simpleForm").serialize();
-
-                     // Show notification
-                     swal({
-                         title: "Thank you!",
-                         text: "You approved our example form!",
-                         type: "success"
-                     });
-         //            Example code for post form
-         //            $.ajax({
-         //                type: "POST",
-         //                url: "your_link.php",
-         //                data: datastring,
-         //                success: function(data) {
-         //                    // Notification
-         //                }
-         //            });
-                 } else {
-                     // Show notification
-                     swal({
-                         title: "Error!",
-                         text: "You have to approve form checkbox.",
-                         type: "error"
-                     });
-                 }
-             })
-         });
       </script>
 
    </body>
